--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -19,6 +19,10 @@
 \usepackage{multicol}
 \usepackage[super]{nth}
 
+\usepackage{tikz}
+\usetikzlibrary{matrix}
+\newcommand{\RNum}[1]{\uppercase\expandafter{\romannumeral #1\relax}}
+
 \usepackage{minted}
 \renewcommand{\listingscaption}{\normalfont{}Listing}
 
