--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -55,12 +55,14 @@
 
 \chapter{API documentation}
 \label{ch:sphinx}
-\fixme{some text}
-\includepdf[pages=5-18,trim=0 2cm 0 1.8cm,clip,pagecommand=,offset=0 1cm]{./img/sphinx.pdf}
+The API documentation on the following pages has been generated from Python
+docstrings in the API implementation. Sphinx 1.8.2 was used.
 
-\chapter{Task description / Aufgabenstellung}
+{\let\clearpage\relax\chapter{Task description / Aufgabenstellung}}
+The original task description for this project (written in German) can be found on page \pageref{ch:aufgabenstellung}ff.
+
+\includepdf[pages=5-15,17-18,trim=0 2cm 0 1.8cm,clip,pagecommand=,offset=0 1cm]{./img/sphinx.pdf}
 \label{ch:aufgabenstellung}
-\fixme{some text}
 \includepdf[pages=-,pagecommand=]{./img/SA_Bruhin_Aufgabenstellung_v2.pdf}
 
 \chapter{Test log}
