--- a/doc/existing.tex
+++ b/doc/existing.tex
@@ -604,7 +604,7 @@ The API exposed by those objects is quite long, so it's not included in full in
 this documentation.\footnote{The full API is available at
   \url{https://github.com/qutebrowser/qutebrowser/blob/v1.5.2/qutebrowser/browser/browsertab.py},
 accessed 2018-11-09.} As an example, the public API exposed in the main
-\verb|Tab| object is listed in figure \ref{lst:tabapi}.
+\verb|Tab| object is listed on page \pageref{lst:tabapi}.
 
 Some parts of the API (like the \verb|networkaccessmanager()| or
 \verb|user_agent()| methods) are only exposed because there was a need in
