--- a/doc/results.tex
+++ b/doc/results.tex
@@ -294,7 +294,7 @@ Note that it receives an \verb|InitContext| object with additional information
 (such as commandline arguments). Since the argument is unused, its name is
 prefixed by an underscore, a common convention in Python code.
 
-The full code of the demo extension can be found in listing \ref{lst:demo}.
+The full code of the demo extension can be found on page \pageref{lst:demo}.
 
 \begin{listing}[b]
 \centering
