--- a/doc/projmanagement.tex
+++ b/doc/projmanagement.tex
@@ -6,6 +6,8 @@
 
 % Prototypen, Releases, Meilensteine
 \section{Prototypes, Releases, Milestones}
+\fixme{Split up actual releases?}
+
 Since this project is done without any external industry partner, there is no
 immediate need for fixed releases or prototypes during the SA.
 
@@ -146,7 +148,7 @@ third-party changes which would lead to conflicts with refactoring changes.
     \ganttbar{Adding extension API}{11}{12} \\
     \ganttmilestone{M2: API review}{11} \\
     \ganttbar{Refactoring core into extensions}{11}{12} \\
-    \ganttmilestone{M3: v1.6.0 release}{12} \\
+    \ganttmilestone{M3: Feature freeze}{12} \\
     \ganttbar{Buffer}{13}{13} \\
 
     \ganttgroup{Transition}{14}{14} \\
