--- a/doc/results.tex
+++ b/doc/results.tex
@@ -144,6 +144,8 @@ cloc\footnote{\url{https://github.com/AlDanial/cloc}} tool (``count lines of
 code'') are presented for all files created as part of this project, as well as
 files with major changes:
 
+\fixme{whitespace still here?}
+
 \begingroup
 \renewcommand{\arraystretch}{1}
 \begin{table}[H]
