Start time analysis

--- a/doc/results.tex
+++ b/doc/results.tex
@@ -130,8 +130,9 @@ half a day of time was lost due to the incident.
 % Projektmonitoring (Ist-Beschreibung, so ist es passiert)
 % \chapter{Project Monitoring}
 % Soll-Ist-Zeit-Vergleich
-\section{Allocated/Actual Time}
-\fixme{}
+\section{Time evaluation}
+
+
 
 % Codestatistik (Zeilen: Kommentare, Klassen, Packages)
 \section{Code Statistics}
