Finish time analysis

--- a/doc/projmanagement.tex
+++ b/doc/projmanagement.tex
@@ -45,6 +45,7 @@ HSR.
 
 % Team, Rollen und Verantwortlichkeiten
 \section{Team and Roles}
+\label{sec:team}
 \emph{Florian Bruhin} is both the primary maintainer of qutebrowser and the
 sole author of this student research project. He has been working on qutebrowser since
 December 2013 and started studying Computer Science at HSR in 2016.
