Fix pdfpages selection

--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -61,7 +61,7 @@ docstrings in the API implementation. Sphinx 1.8.2 was used.
 {\let\clearpage\relax\chapter{Task description / Aufgabenstellung}}
 The original task description for this project (written in German) can be found on page \pageref{ch:aufgabenstellung}ff.
 
-\includepdf[pages=5-15,17-18,trim=0 2cm 0 1.8cm,clip,pagecommand=,offset=0 1cm]{./img/sphinx.pdf}
+\includepdf[pages={5-15,17-18},trim=0 2cm 0 1.8cm,clip,pagecommand=,offset=0 1cm]{./img/sphinx.pdf}
 \label{ch:aufgabenstellung}
 \includepdf[pages=-,pagecommand=]{./img/SA_Bruhin_Aufgabenstellung_v2.pdf}
 
