Last brochure update

--- a/doc/abstract.tex
+++ b/doc/abstract.tex
@@ -10,7 +10,7 @@ browsers.
 In contrast to Chrome and Firefox, qutebrowser did not support extending its
 functionality via extensions. Over its lifetime, various features have been
 added to its core by its maintainer and contributors. However, this caused the
-core to grow substantially, becoming more and more complex over time.
+core to grow substantially, becoming increasingly complex over time.
 
 Many users of qutebrowser have specific feature requests and workflows. It
 should be possible for them to extend qutebrowser in an easy way in order to
