--- a/doc/main.tex
+++ b/doc/main.tex
@@ -8,8 +8,8 @@
 
 \tableofcontents
 
-\listoffigures
-{\let\clearpage\relax \listoftables}
+\listoffigures \vspace{-3em}
+{\let\clearpage\relax \listoftables} \vspace{-3em}
 {\let\clearpage\relax \listoflistings}
 
 \include{intro}
