--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -112,5 +112,5 @@ expected to fail due to known bugs.
 Note only the subset of tests relevant to this project was ran.
 
 \renewcommand{\bibname}{\chapter{Literature and Sources}\vspace{-1em}}
-\printbibliography
+{\let\clearpage\relax\printbibliography}
 \end{appendices}
