--- a/doc/implementation.tex
+++ b/doc/implementation.tex
@@ -574,18 +574,18 @@ changes) is shown in table \ref{tab:coverage}.
                           stub/mock exists yet. \\
     & hook.py & 90 & \\
     & interceptor.py & 100 & \\
-    & downloads.py & 100 & \strut\vspace{1em} \\
+    & downloads.py & 100 & \strut\vspace{2em} \\
     components/ & \emph{Average} & 85 & \\
     & adblock.py & 93 & \\
     & caretcommands.py & 82 & \\
     & misccommands.py & 73 & Some commands (like printing) contain
-                             hard to test GUI-interactions \\
+                             hard to test GUI-interactions. \\
     & scrollcommands.py & 96 & \\
-    & zoomcommands.py & 85 & \strut\vspace{1em} \\
+    & zoomcommands.py & 85 & \strut\vspace{2em} \\
     extensions/ & \emph{Average} & 89 & \\
     & interceptors.py & 94 & \\
-    & loader.py & 88 & \strut\vspace{1em} \\
-    browser/ & browsertab.py & 87 & \\
+    & loader.py & 88 & \strut\vspace{2em} \\
+    browser/ & browsertab.py & 87 & \strut\vspace{2em} \\
     commands/ & command.py & 89 & \\
     \midrule
     Average & & 90 & \\
