--- a/doc/main.tex
+++ b/doc/main.tex
@@ -20,6 +20,9 @@
 \include{concept}
 \include{implementation}
 \include{results}
+\clearpage
+\strut
+\pagebreak
 \include{appendices}
 
 \end{document}
