--- a/doc/results.tex
+++ b/doc/results.tex
@@ -153,7 +153,7 @@ spent time each week shows the following distribution:
   \renewcommand{\arraystretch}{1}
   \begin{table}[H]
     \centering
-    \begin{tabulary}{\linewidth}{rr@{\hspace{3em}}rr}
+    \begin{tabulary}{\linewidth}{rr@{\hspace{1em}}|@{\hspace{1em}}rr}
       \toprule
       Week & Time (h) & Week & Time (h) \\
       \midrule
@@ -164,11 +164,10 @@ spent time each week shows the following distribution:
       5 & 5 & 12 & 17 \\
       6 & 13 & 13 & 35 \\
       7 & 15 & 14 & 20 \\
-      \midrule
-      & & Total & 237 \\
       \bottomrule
     \end{tabulary}
   \end{table}
+  Total: 237 hours
   \endgroup
 \end{minipage}
 \caption{Time spent per week}
@@ -379,7 +378,7 @@ The full code of the demo extension can be found on page \pageref{lst:demo}.\\[2
 \end{figure}
 
 
-\begin{listing}[b]
+\begin{listing}[p]
 \centering
 \begin{minted}[linenos]{python}
 import typing
